# ch.ai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/: CRITICAL_FIXES_QUICK_REF.md  EXECUTIVE_SUMMARY.md  IMPROVEMENTS_INDEX.md  IMPROVEMENT_RECOMMENDATIONS.md  PRIORITY_ACTION_ITEMS.md  architecture-diagram.md
docs/design-docs/: core-beliefs.md  index.md
docs/golden-principles/: index.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActivityBanner.tsx  AgentConsole.tsx  ChatView.tsx  ConsoleOutput.tsx  DirectoryPicker.tsx  PlanDetail.tsx  PlanViewer.tsx  QualityDashboard.tsx  Spinner.tsx  TaskBoard.tsx  TeamView.tsx
frontend/src/hooks/: useCliRunWatcher.ts
frontend/src/store/: chatSessions.tsx
frontend/src/styles/: index.css
src/chai/: __init__.py  api.py  cli.py  config.py  state.py  types.py
src/chai/core/: __init__.py  agent.py  context.py  harness.py  role.py  router.py  task.py  team.py
src/chai/knowledge/: __init__.py  agents_md.py  docs_manager.py  gardener.py  repository.py
src/chai/orchestration/: __init__.py  coordinator.py  feedback.py  merge.py  (+4 more)
tests/: conftest.py  test_cli.py  test_e2e_simulation.py
tests/core/: __init__.py  test_role.py  test_router.py  test_task.py  test_team.py
tests/knowledge/: test_repository.py
tests/orchestration/: test_coordinator.py  test_scheduler.py
tests/providers/: test_providers.py
tests/quality/: test_golden_principles.py
tests/tools/: test_tools.py
tests/ui/: test_terminal.py
(+31 files in other folders)
